--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "homepage": "https://github.com/flrngel/workaholic",
   "devDependencies": {
     "redis": "~0.9.1",
-    "forever-monitor": "~1.2.3"
+    "forever-monitor": "~1.2.3",
+    "hiredis": "~0.1.15"
   }
 }
