--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "redis": "~0.9.1",
     "forever-monitor": "~1.2.3",
-    "hiredis": "~0.1.15"
+    "hiredis": "~0.1.15",
+    "daemonize2": "~0.4.2"
   }
 }
