--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "redis": "~0.9.1",
     "forever-monitor": "~1.2.3",
     "hiredis": "~0.1.15",
-    "daemonize2": "~0.4.2"
+    "forever": "~0.10.10"
   }
 }
