--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "hiredis": "~0.1.15",
     "forever": "~0.10.10"
   },
-  "description": "workaholic ==========",
+  "description": "workaholic",
   "main": "./workaholic",
   "dependencies": {
     "coffee": "~0.0.1",
-    "daemonize2": "~0.4.2",
     "forever": "~0.10.10",
     "forever-monitor": "~1.2.3",
     "hiredis": "~0.1.15",
