--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
 	"redis":{
 		"host": "localhost",
 		"port": "6379"
-		//"password": 'foobar'
+		//"password": "foobar"
 	},
 	"front":{
 		"port": "8007"
