--- a/config.json
+++ b/config.json
@@ -2,11 +2,12 @@
 	"redis":{
 		"host": "localhost"
 		,"port": 6379
-		//,"password": "foobar"
+	//,"password": "<insert_your_redis_auth_password>"
 	},
 	"front":{
 		"port": 8007
 		,"ticket_expire_time": 60
+	//,"password": "<insert_your_password>"
 	},
 	"worker":{
 		"number": 4
