--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
 		"password": "<insert_your_password>"
 	},
 	"worker":{
-		"number": 4
-		,"sleeptime": 100
+		"number": 4,
+		"sleeptime": 100
 	}
 }
