--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "async": "^0.8.0",
     "node-uuid": "^1.4.1",
     "express": "^4.2.0",
-    "body-parser": "^1.2.0"
+    "body-parser": "^1.2.0",
+    "jshint": "^2.5.0"
   },
   "description": "workaholic",
   "main": "./workaholic",
@@ -31,7 +32,7 @@
     "redis": "~0.9.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jshint boss/boss.js worker/worker.js front/front.js config.json worklist.json"
   },
   "keywords": [
     "workaholic",
